Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-23098

mariadb-upgrade-service.exe gives FATAL ERROR on Windows

    XMLWordPrintable

Details

    Description

      Hi,

      E:\wamp64\bin\mariadb\mariadb10.5.4\bin>mariadb-upgrade-service.exe --service=wampmariadb64
      FATAL ERROR: Not a valid MySQL service
      

      This also happens with MariaDB 10.4.13 or 10.3.23.
      This happens if service is created either with the Windows SC command or the (obsolete) mysqld.exe --install-manual command.

      sc create wampmariadb64 binpath="E:\wamp64\bin\mariadb\mariadb10.5.4\bin\mysqld.exe --defaults-file=E:\wamp64\bin\mariadb\mariadb10.5.4\.\my.ini wampmariadb64"
      

      E:/wamp64/bin/mariadb/mariadb10.5.4/bin/mysqld.exe --install-manual wampmariadb64 --defaults-file=E:\wamp64\bin\mariadb\mariadb10.5.4\my.ini
      

      Attachments

        Activity

          People

            wlad Vladislav Vaintroub
            Otomatic Dominique Ottello
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 3h
                3h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.