MDEV-23098 mariadb-upgrade-service.exe does not work on WAMPServer

While trying to detect datadir, take into account that one can use
Windows service name as section name in options file, for Windows service.

The historical obscurity is being used by WAMP installations.